--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(rrt CXX)
 
+if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
+    set(Boost_ARCHITECTURE "-x64")
+else()
+    set(Boost_ARCHITECTURE "-x32")
+endif()
+
 find_package(Boost REQUIRED COMPONENTS
     log filesystem
 )
