added dxf lib and some fixes in libdxfrw

--- a/libs/libdxfrw/CMakeLists.txt
+++ b/libs/libdxfrw/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(libdxfrw)
 
 add_subdirectory(src)
-add_subdirectory(dwg2dxf)
-add_subdirectory(dwg2text)
+#add_subdirectory(dwg2dxf)
+#add_subdirectory(dwg2text)
