--- a/libs/libdxfrw/src/CMakeLists.txt
+++ b/libs/libdxfrw/src/CMakeLists.txt
@@ -1,14 +1,16 @@
 file(GLOB src
     "*.cpp"
-    "*.h"
     "intern/*.cpp"
-    "intern/*.h"
 )
 
-add_library(dxfrw SHARED ${src})
+add_library(dxfrw SHARED
+    ${src}
+)
 
 target_link_libraries(dxfrw
     iconv
 )
 
-target_link_options(dxfrw PUBLIC -liconv)
+target_link_options(dxfrw PUBLIC
+    -liconv
+)
