--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5 COMPONENTS Widgets Core REQUIRED)
 
+# rrt
+
 add_executable(rrt
     main.cpp
 )
@@ -13,10 +15,27 @@ target_link_libraries(rrt
     xml
 )
 
+# dxf
+
 add_library(dxf SHARED
     dxf.h
     dxf.cpp
 )
+
+target_link_libraries(dxf
+    Boost::log
+    Boost::filesystem
+    fmt::fmt
+    dxfrw
+    spatial
+    cadastral_info
+)
+
+target_include_directories(dxf PUBLIC
+    ../libs/libdxfrw/include
+)
+
+# xml
 
 add_library(xml SHARED
     xml.h
@@ -29,33 +48,6 @@ add_library(xml SHARED
     xmlparser.cpp
     standardparser.h
     standardparser.cpp
-    xmlinfo.h
-    xmlinfo.cpp
-    cadastralnumber.h
-    cadastralnumber.cpp
-)
-
-add_library(spatial SHARED
-    point.h
-    point.cpp
-    spatial.h
-    spatial.cpp
-    rect.h
-    rect.cpp
-    compare.h
-    compare.cpp
-)
-
-target_include_directories(dxf PUBLIC
-    ../libs/libdxfrw/include
-)
-
-target_link_libraries(dxf
-    Boost::log
-    Boost::filesystem
-    fmt::fmt
-    dxfrw
-    spatial
 )
 
 include_directories(xml
@@ -70,6 +62,20 @@ target_link_libraries(xml
     Boost::filesystem
     spatial
     dxf
+    cadastral_info
+)
+
+# spatial
+
+add_library(spatial SHARED
+    point.h
+    point.cpp
+    spatial.h
+    spatial.cpp
+    rect.h
+    rect.cpp
+    compare.h
+    compare.cpp
 )
 
 include_directories(spatial
@@ -79,4 +85,24 @@ include_directories(spatial
 target_link_libraries(spatial
     fmt::fmt
     Boost::log
+)
+
+# cadastral_info
+
+add_library(cadastral_info SHARED
+    xmlspatialinfo.h
+    xmlspatialinfo.cpp
+    xmlinfo.h
+    xmlinfo.cpp
+    cadastralnumber.h
+    cadastralnumber.cpp
+)
+
+include_directories(cadastral_info
+    ${Boost_INCLUDE_DIRS}
+)
+
+target_link_libraries(cadastral_info
+    fmt::fmt
+    Boost::date_time
 )
