--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,11 +46,14 @@ add_library(xml SHARED
     xmlparser.cpp
     standardparser.h
     standardparser.cpp
+    idb.h
+    idb.cpp
 )
 
-include_directories(xml
+target_include_directories(xml PUBLIC
     ${Boost_INCLUDE_DIRS}
     pugixml_INCLUDE_DIRS
+    ../libs/sqlite
 )
 
 target_link_libraries(xml
@@ -61,6 +64,7 @@ target_link_libraries(xml
     spatial
     dxf
     cadastral_info
+    sqlite
 )
 
 # spatial
