added DB singletone class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,8 @@ add_library(xml SHARED
     standardparser.cpp
     idb.h
     idb.cpp
+    db.h
+    db.cpp
 )
 
 target_include_directories(xml PUBLIC
