added XMLfiles copy to inner data folder, refactored renameFile format

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(rrt
     xmltreedelegate.cpp
     xmltreeview.h
     xmltreeview.cpp
+    vecstr.h
+    vecstr.cpp
 )
 
 target_link_libraries(rrt
