added XMLTreeButtons with collapse and expand buttons

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -23,6 +23,8 @@ add_executable(rrt
     xmltreeview.cpp
     vecstr.h
     vecstr.cpp
+    xmltreebuttons.h
+    xmltreebuttons.cpp
 )
 
 target_link_libraries(rrt
