added XMLTreeSortFilterProxyModel onNewXMLFiles now in main thread, only pushtodb is multithreaded, because model is not thread-safe

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -27,6 +27,8 @@ set(SRC
     vecstr.cpp
     xmltreebuttons.h
     xmltreebuttons.cpp
+    xmltreesortfilterproxymodel.h
+    xmltreesortfilterproxymodel.cpp
 )
 
 file(GLOB TS_FILES
