moved onCopySemicolon and NewLine buttons to XMLTreeButtons; endProcessingDXFSignal now emits std::shared_ptr<DXFResult>, added comboBox - based copy to clipboard behavior

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRC
     xmltreebuttons.cpp
     xmltreesortfilterproxymodel.h
     xmltreesortfilterproxymodel.cpp
+    typedefs.h
 )
 
 file(GLOB TS_FILES
