--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
+release/*
 *.dwl
 *.dwl2
 *.bak
