added util.h with preparePath function

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -29,6 +29,10 @@ set(SRC
     xmltreesortfilterproxymodel.cpp
     updater.h
     updater.cpp
+    xmlroottreeitem.h
+    xmlroottreeitem.cpp
+    util.h
+    util.cpp
     typedefs.h
 )
 
